--- a/ARBeauty/Storyboards/Base.lproj/Main.storyboard
+++ b/ARBeauty/Storyboards/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -188,32 +187,7 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OptionCollectionViewCell" id="gDU-Ct-CcS" customClass="OptionCollectionViewCell" customModule="ARBeauty" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="5" width="60" height="60"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="GU2-Tx-Ahu">
-                                            <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zci-I1-rZg">
-                                                    <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                </view>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="Zci-I1-rZg" secondAttribute="trailing" id="LCn-RA-c0V"/>
-                                                <constraint firstAttribute="bottom" secondItem="Zci-I1-rZg" secondAttribute="bottom" id="sv7-J3-R5k"/>
-                                                <constraint firstItem="Zci-I1-rZg" firstAttribute="top" secondItem="GU2-Tx-Ahu" secondAttribute="top" id="vqr-a7-KKk"/>
-                                                <constraint firstItem="Zci-I1-rZg" firstAttribute="leading" secondItem="GU2-Tx-Ahu" secondAttribute="leading" id="yFN-lr-oHq"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
-                                        <size key="customSize" width="60" height="60"/>
-                                        <connections>
-                                            <outlet property="optionView" destination="Zci-I1-rZg" id="vJk-eD-bMZ"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                                 <connections>
                                     <outlet property="dataSource" destination="Of0-jy-81A" id="PLq-Ok-0Eg"/>
                                     <outlet property="delegate" destination="Of0-jy-81A" id="mF9-eN-anf"/>
